--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-A Javascript/JQuery web implementation of the classic game Minesweeper. Try it online here: http://www.orbstudio.net/minesweeper/index.htm
+A Javascript/JQuery web implementation of the classic game Minesweeper. 
+Try it online here: http://www.orbstudio.net/minesweeper/index.htm
