--- a/README
+++ b/README
@@ -1,2 +1,3 @@
 A Javascript/JQuery web implementation of the classic game Minesweeper. 
 Try it online here: http://www.orbstudio.net/minesweeper/index.htm
+Works best in Firefox
